# LSI

./: .gitignore  FigureObject.fig.pickle  README.md  diag.pkl  full.pkl  kaggle.json  lorem.pkl  lorem_train.pkl  loss.pkl  pyproject.toml  run.sh  run.txt  run_sweep.sh  test2.py
LSI/: boilerplate_LSI.py  compute_kl_torch.py  compute_kl_torch_SAM.py  compute_kl_torch_contrastive.py  compute_kl_torch_contrastive_wo_text.py  compute_kl_torch_diag_kron_full.py  compute_kl_torch_difficulty_computation_nlp.py  compute_kl_torch_dp.py  compute_kl_torch_full_ll_proxy.py  compute_kl_torch_influence_trak.py  compute_kl_torch_multi_models.py  compute_kl_torch_subset.py  main.py  pre_process_language_dataset.py  resnetify_dataset.py  temp.py  test3.py
experiments/: resultsexp.pkl
mimic_experiments/: 3 - Convolutional Neural Networks.ipynb  ablation_log_reg_on_lin.ipynb  ablation_log_reg_on_lin.py  compute_anything.py  compute_feld_score.py  compute_feld_score_from_original.py  compute_frozen_idp.py  compute_kl.py  compute_kl_cifar100.py  compute_kl_convex.py  compute_kl_jax.py  compute_kl_jax_diff.py  compute_kl_jax_difficulty_computation.py  compute_kl_jax_difficulty_computation_fairness.py  compute_kl_jax_dp.py  compute_kl_jax_lbfgs.py  compute_kl_jax_multilayer.py  compute_kl_jax_normal_train.py  compute_kl_mnist.py  compute_kl_mnist_remove_elem_wise.py  compute_kl_mnist_remove_most_diff.py  compute_kl_mnist_single_train.py  compute_kl_mnist_w_DP.py  compute_kl_scikit.py  compute_kl_torch.py  compute_kl_torch_batching.py  compute_kl_torch_contrastive.py  compute_kl_torch_dp.py  (+18 more)
(+221 files in other folders)
